[gd_scene load_steps=29 format=4 uid="uid://bm2qaccjcy00b"]

[ext_resource type="Texture2D" uid="uid://c5s2hrlt2ccgm" path="res://assets/Blue.png" id="1_4fmb2"]
[ext_resource type="Script" path="res://main.gd" id="1_f8jqy"]
[ext_resource type="Texture2D" uid="uid://dpjfl8jiimvx3" path="res://assets/Terrain (16x16).png" id="2_i5v1g"]
[ext_resource type="Texture2D" uid="uid://cbkql87n3ipnc" path="res://block.png" id="3_scnf6"]
[ext_resource type="PackedScene" uid="uid://dqqc12rc88x6u" path="res://character/character_body_2d.tscn" id="3_tac4o"]
[ext_resource type="PackedScene" uid="uid://buq6m0boebfrh" path="res://barrel/barrel.tscn" id="4_5bejk"]
[ext_resource type="Script" path="res://jump_bar.gd" id="4_l3lgs"]
[ext_resource type="Texture2D" uid="uid://c25ogtxetuxo0" path="res://chain.png" id="4_pl1md"]
[ext_resource type="Texture2D" uid="uid://dy7twkmy73820" path="res://platform_large.png" id="5_hd58f"]
[ext_resource type="Script" path="res://health_bar.gd" id="5_rhnuf"]
[ext_resource type="PackedScene" uid="uid://copjurvsoieqm" path="res://coin/coinui.tscn" id="6_j4v6r"]
[ext_resource type="Texture2D" uid="uid://dd7d5m6dqgylc" path="res://platform_small.png" id="6_nfxbb"]
[ext_resource type="Texture2D" uid="uid://chsu6xkaf2md8" path="res://torch.png" id="7_cijpc"]
[ext_resource type="PackedScene" uid="uid://8sco8kh0fk4w" path="res://enemy/enemy.tscn" id="8_cwafa"]
[ext_resource type="Texture2D" uid="uid://dwgsl6gwrmxpa" path="res://torch_backgound.png" id="8_h83iy"]
[ext_resource type="PackedScene" uid="uid://cdkr5ypexve51" path="res://barrel/impasible.tscn" id="8_ln4fk"]
[ext_resource type="Texture2D" uid="uid://bpr60nwsbbsqs" path="res://tilemap.png" id="9_hnuy7"]
[ext_resource type="PackedScene" uid="uid://caqfcrf27ytkv" path="res://coin/coin.tscn" id="10_4x0mx"]
[ext_resource type="PackedScene" path="res://hotbar.tscn" id="13_rs547"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rkc28"]
texture = ExtResource("2_i5v1g")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rumvp"]
texture = ExtResource("3_scnf6")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nf75j"]
texture = ExtResource("4_pl1md")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_80cyw"]
texture = ExtResource("5_hd58f")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_siyqr"]
texture = ExtResource("6_nfxbb")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fo3t5"]
texture = ExtResource("7_cijpc")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kkd0k"]
texture = ExtResource("8_h83iy")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_253kd"]
texture = ExtResource("9_hnuy7")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.2812, -16, 15.9961, -16.0469, 16.1562, 4.9375, -16.0938, 5)
0:1/0 = 0
1:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.2812, -16, 15.9961, -16.0469, 16.1562, 4.9375, -16.0938, 5)
3:1/0 = 0
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.2812, -16, 15.9961, -16.0469, 16.1562, 4.9375, -16.0938, 5)
4:1/0 = 0
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.2812, -16, 15.9961, -16.0469, 16.1562, 4.9375, -16.0938, 5)
5:1/0 = 0
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.2812, -16, 15.9961, -16.0469, 16.1562, 4.9375, -16.0938, 5)
6:1/0 = 0
7:0/0 = 0
7:1/0 = 0
8:0/0 = 0
8:1/0 = 0
9:0/0 = 0
9:1/0 = 0
10:0/0 = 0
10:1/0 = 0
11:0/0 = 0
11:1/0 = 0
12:0/0 = 0
12:1/0 = 0
13:0/0 = 0
13:1/0 = 0
14:0/0 = 0
14:1/0 = 0
15:0/0 = 0
15:1/0 = 0
16:0/0 = 0
16:1/0 = 0
17:0/0 = 0
17:1/0 = 0
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.2812, -16, 15.9961, -16.0469, 16.1562, 4.9375, -16.0938, 5)

[sub_resource type="TileSet" id="TileSet_c5u5g"]
physics_layer_0/collision_layer = 25
physics_layer_0/collision_mask = 31
physics_layer_1/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_rkc28")
sources/1 = SubResource("TileSetAtlasSource_rumvp")
sources/2 = SubResource("TileSetAtlasSource_nf75j")
sources/3 = SubResource("TileSetAtlasSource_80cyw")
sources/4 = SubResource("TileSetAtlasSource_siyqr")
sources/5 = SubResource("TileSetAtlasSource_fo3t5")
sources/6 = SubResource("TileSetAtlasSource_kkd0k")
sources/7 = SubResource("TileSetAtlasSource_253kd")

[node name="Node" type="Node2D"]
script = ExtResource("1_f8jqy")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4fmb2")
stretch_mode = 1

[node name="TileLayer" type="TileMapLayer" parent="."]
texture_filter = 1
use_parent_material = true
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAAABIAAAAAAAEAAAAAABEAAAAAAAEAAAAAABAAAAAAAAEAAAAAAA8AAAAAAAEAAAAAAA4AAAAAAAEAAAAAAA0AAAAAAAEAAAAAAAwAAAAAAAEAAAAAAAsAAAAAAAEAAAAAAAoAAAAAAAEAAAAAAAkAAAAAAAEAAAAAAAgAAAAAAAEAAAAAAAcAAAAAAAEAAAAAAAYAAAAAAAEAAAAAAAUAAAAAAAEAAAAAAAQAAAAAAAEAAAAAAAMAAAAAAAEAAAAAAAIAAAAAAAEAAAAAAAEAAAAAAAEAAAAjAAEAAAAAAAEAAAAjAAIAAAAAAAEAAAAjAAMAAAAAAAEAAAAjAAQAAAAAAAEAAAAjAAUAAAAAAAEAAAAjAAYAAAAAAAEAAAAjAAcAAAAAAAEAAAAjAAgAAAAAAAEAAAAjAAkAAAAAAAEAAAAjAAoAAAAAAAEAAAAjAAsAAAAAAAEAAAAjAAwAAAAAAAEAAAAjAA0AAAAAAAEAAAAjAA4AAAAAAAEAAAAjAA8AAAAAAAEAAAAjABAAAAAAAAEAAAAjABEAAAAAAAEAAAAjABIAAAAAAAEAAAAiABMAAAABAAAAAAAhABMAAAABAAAAAAAgABMAAAABAAAAAAAfABMAAAABAAAAAAAeABMAAAABAAAAAAAdABMAAAABAAAAAAAcABMAAAABAAAAAAAbABMAAAABAAAAAAAaABMAAAABAAAAAAAZABMAAAABAAAAAAAYABMAAAABAAAAAAAXABMAAAABAAAAAAAWABMAAAABAAAAAAAVABMAAAABAAAAAAAUABMAAAABAAAAAAATABMAAAABAAAAAAASABMAAAABAAAAAAARABMAAAABAAAAAAAQABMAAAABAAAAAAAPABMAAAABAAAAAAAOABMAAAABAAAAAAANABMAAAABAAAAAAAMABMAAAABAAAAAAALABMAAAABAAAAAAABABMAAAABAAAAAAACABMAAAABAAAAAAADABMAAAABAAAAAAAEABMAAAABAAAAAAAFABMAAAABAAAAAAAGABMAAAABAAAAAAAHABMAAAABAAAAAAAIABMAAAABAAAAAAAJABMAAAABAAAAAAAKABMAAAABAAAAAAAWAAUABwAFAAAAAAAYAAUABwADAAAAAAAaAAUABwADAAAAAAAcAAUABwADAAAAAAAeAAUABwAGAAAAAAAOABEAAAACAAEAAAAOABIAAAACAAEAAAAKABEABwAAAAAAAAACAA8ABwACAAAAAAAEAA8ABwADAAAAAAAGAA8ABwAEAAAAAAAaABEABwACAAAAAAAcABEABwADAAAAAAAeABEABwAEAAAAAAAgAA8ABwAFAAAAAAAiAA8ABwAGAAAAAAAbAA0ABwAEAAAAAAAZAA0ABwADAAAAAAAXAA0ABwADAAAAAAAVAA0ABwACAAAAAAARAAsABwAGAAAAAAAPAAsABwAFAAAAAAAMAAkABwAAAAAAAAAHAAkABwAAAAAAAAACAAkABwAAAAAAAAAUAAgABwACAAAAAAAWAAgABwADAAAAAAAYAAgABwAEAAAAAAAPAAQABwAEAAAAAAASAAQABwAAAAAAAAANAAQABwADAAAAAAALAAQABwADAAAAAAAJAAQABwADAAAAAAAHAAQABwADAAAAAAAFAAQABwADAAAAAAADAAQABwADAAAAAAABAAQABwAFAAAAAAARABAABwAHAAAAAAAXABAABwAHAAAAAAAEAAwABwAHAAAAAAAQAAgABwAHAAAAAAADAAEABwAHAAAAAAAJAAEABwAHAAAAAAAOAAEABwAHAAAAAAAWAA4ABwABAAAAAAAWABAABwABAAAAAAAWABIABwABAAAAAAAbAA8ABwABAAAAAAADAAAAAAABAAAAAAAEAAAAAAABAAAAAAAFAAAAAAABAAAAAAAGAAAAAAABAAAAAAAHAAAAAAABAAAAAAAIAAAAAAABAAAAAAAJAAAAAAABAAAAAAAKAAAAAAABAAAAAAALAAAAAAABAAAAAAAMAAAAAAABAAAAAAANAAAAAAABAAAAAAAOAAAAAAABAAAAAAAPAAAAAAABAAAAAAAQAAAAAAABAAAAAAARAAAAAAABAAAAAAASAAAAAAABAAAAAAATAAAAAAABAAAAAAAUAAAAAAABAAAAAAAVAAAAAAABAAAAAAAWAAAAAAABAAAAAAAXAAAAAAABAAAAAAAYAAAAAAABAAAAAAAZAAAAAAABAAAAAAAaAAAAAAABAAAAAAAbAAAAAAABAAAAAAAcAAAAAAABAAAAAAAdAAAAAAABAAAAAAAeAAAAAAABAAAAAAAiAAAAAAABAAAAAAAhAAAAAAABAAAAAAAgAAAAAAABAAAAAAAfAAAAAAABAAAAAAAAAAAAAAAAAAAAAAACAAAAAAABAAAAAAABAAAAAAABAAAAAAAjAAAAAAACAAAAAAAAABMAAAACAAAAAAAjABMAAAACAAAAAAA=")
tile_set = SubResource("TileSet_c5u5g")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="JumpBar" type="ProgressBar" parent="CanvasLayer"]
texture_filter = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -197.0
offset_top = 41.0
offset_right = -105.0
offset_bottom = 58.0
grow_horizontal = 0
show_percentage = false
script = ExtResource("4_l3lgs")

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
texture_filter = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -238.0
offset_top = 68.0
offset_right = -70.0
offset_bottom = 85.0
grow_horizontal = 0
show_percentage = false
script = ExtResource("5_rhnuf")

[node name="hotbar" parent="CanvasLayer" instance=ExtResource("13_rs547")]

[node name="EnemyBullets" type="Node2D" parent="."]

[node name="enemy" parent="." instance=ExtResource("8_cwafa")]
position = Vector2(762, 380)

[node name="barrel" parent="." instance=ExtResource("4_5bejk")]
position = Vector2(88, 448)

[node name="rigiddbody" parent="." instance=ExtResource("8_ln4fk")]
position = Vector2(88, 447)

[node name="Bullets" type="Node2D" parent="."]

[node name="CharacterBody2D" parent="." instance=ExtResource("3_tac4o")]
position = Vector2(84, 609)

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
position = Vector2(0.5, -7)
scale = Vector2(0.5, 0.5)
position_smoothing_enabled = true
position_smoothing_speed = 20.0

[node name="CanvasLayer" type="CanvasLayer" parent="CharacterBody2D"]

[node name="coinui" parent="CharacterBody2D/CanvasLayer" instance=ExtResource("6_j4v6r")]
offset_left = 980.0
offset_top = 112.0
offset_right = 1020.0
offset_bottom = 150.0

[node name="Coin" parent="." instance=ExtResource("10_4x0mx")]
position = Vector2(337, 505)

[node name="barrel2" parent="." instance=ExtResource("4_5bejk")]
position = Vector2(866, 131)

[node name="StaticBody2D" parent="." instance=ExtResource("8_ln4fk")]
position = Vector2(866, 131)

[node name="barrel3" parent="." instance=ExtResource("4_5bejk")]
position = Vector2(250, 99)

[node name="StaticBody2D2" parent="." instance=ExtResource("8_ln4fk")]
position = Vector2(250, 99)

[node name="Area2D" parent="." instance=ExtResource("10_4x0mx")]
position = Vector2(90, 92)

[node name="Area2D2" parent="." instance=ExtResource("10_4x0mx")]
position = Vector2(188, 89)

[node name="Area2D3" parent="." instance=ExtResource("10_4x0mx")]
position = Vector2(320, 90)

[node name="Area2D4" parent="." instance=ExtResource("10_4x0mx")]
position = Vector2(395, 250)

[node name="Area2D5" parent="." instance=ExtResource("10_4x0mx")]
position = Vector2(242, 255)

[node name="Area2D6" parent="." instance=ExtResource("10_4x0mx")]
position = Vector2(80, 250)

[node name="Area2D7" parent="." instance=ExtResource("10_4x0mx")]
position = Vector2(936, 121)

[node name="Area2D8" parent="." instance=ExtResource("10_4x0mx")]
position = Vector2(1094, 439)

[node name="Area2D9" parent="." instance=ExtResource("10_4x0mx")]
position = Vector2(840, 376)

[node name="Area2D10" parent="." instance=ExtResource("10_4x0mx")]
position = Vector2(714, 374)

[node name="Area2D11" parent="." instance=ExtResource("10_4x0mx")]
position = Vector2(856, 508)

[node name="Area2D12" parent="." instance=ExtResource("10_4x0mx")]
position = Vector2(131, 450)

[connection signal="enemy_shoot" from="enemy" to="." method="_on_enemy_enemy_shoot"]
[connection signal="explo_damage" from="barrel" to="CharacterBody2D" method="_on_barrel_explo_damage"]
[connection signal="new_coin" from="CharacterBody2D" to="CharacterBody2D/CanvasLayer/coinui" method="_on_character_body_2d_new_coin"]
[connection signal="player_pos" from="CharacterBody2D" to="." method="_on_character_body_2d_player_pos"]
[connection signal="player_pos" from="CharacterBody2D" to="enemy" method="_on_character_body_2d_player_pos"]
[connection signal="shoot" from="CharacterBody2D" to="." method="_on_player_shoot"]
[connection signal="explo_damage" from="barrel2" to="CharacterBody2D" method="_on_barrel_2_explo_damage"]
[connection signal="explo_damage" from="barrel3" to="CharacterBody2D" method="_on_barrel_3_explo_damage"]
